--- a/src/components/containers/footer/footer.module.css
+++ b/src/components/containers/footer/footer.module.css
@@ -5,6 +5,9 @@
     width: 100%;
     height: 10rem;
     background-color: brown;
+
+    border-top: 0.3rem solid rgb(110, 22, 22);
+    border-radius: 1rem 1rem 0 0;
 }
 
 .footer *{
