--- a/src/components/pages/generation/generation.module.css
+++ b/src/components/pages/generation/generation.module.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
 
-    padding-top: 21rem;
+    padding-top: 24rem;
     padding-bottom: 11rem;
 }
 
@@ -15,7 +15,8 @@
     margin: 1rem;
     padding: 1rem;
     text-align: center;
-    width: 28%;
+    width: 17rem;
+    height: 19rem;
 
     text-decoration: none;
     color: black;
@@ -26,4 +27,14 @@
 
 .pokemon img {
     width: 100px;
+}
+
+.pokemon:hover {
+    border-color: rgb(226, 226, 226);
+    box-shadow: 1rem 0.5rem 1rem lightgray;
+}
+
+.pokemon:active {
+    border-color: rgb(243, 243, 243);
+    box-shadow: 0.5rem 0.25rem 1rem lightgray;
 }
