--- a/src/components/pages/generation/generation.module.css
+++ b/src/components/pages/generation/generation.module.css
@@ -3,20 +3,21 @@
     flex-wrap: wrap;
     justify-content: space-around;
 
-    padding-top: 24rem;
-    padding-bottom: 11rem;
+    padding-top: 24.5rem;
+    padding-bottom: 8rem;
 }
 
 .generation h2 {
     width: 100%;
+    font-size: 2.5rem;
 }
 
 .pokemon {
     margin: 1rem;
     padding: 1rem;
     text-align: center;
-    width: 17rem;
-    height: 19rem;
+    width: 10rem;
+    height: 13rem;
 
     text-decoration: none;
     color: black;
@@ -26,7 +27,11 @@
 }
 
 .pokemon img {
-    width: 100px;
+    width: 7rem;
+}
+
+.pokemon h3 {
+    font-size: 1.2rem;
 }
 
 .pokemon:hover {
